<resources>
    <string name="app_name">Winlator@Frost</string>
    <string name="run">Run</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="shortcuts">Shortcuts</string>
    <string name="game_stores">Game Stores</string>
    <string name="containers">Containers</string>
    <string name="input_controls">Input Controls</string>
    <string name="no_items_to_display">No items to display</string>
    <string name="new_container">New Container</string>
    <string name="edit_container">Edit Container</string>
    <string name="creating_container">Creating Container...</string>
    <string name="removing_container">Removing Container...</string>
    <string name="duplicating_container">Duplicating Container...</string>
    <string name="installing_system_files">Installing System Files...</string>
    <string name="updating_system_files">Updating System Files...</string>
    <string name="starting_up">Starting up...</string>
    <string name="unable_to_install_system_files">Unable to install system files</string>
    <string name="keyboard">Keyboard</string>
    <string name="toggle_fullscreen">Toggle Fullscreen</string>
    <string name="exit">Exit</string>
    <string name="no_control_element_selected">No control element selected</string>
    <string name="scale">Scale</string>
    <string name="shape">Shape</string>
    <string name="type">Type</string>
    <string name="binding">Binding</string>
    <string name="binding_up">Binding Up</string>
    <string name="binding_right">Binding Right</string>
    <string name="binding_down">Binding Down</string>
    <string name="binding_left">Binding Left</string>
    <string name="overlay_opacity">Overlay Opacity</string>
    <string name="opacity">Opacity</string>
    <string name="profile">Profile</string>
    <string name="select_profile">Select Profile</string>
    <string name="profile_name">Profile Name</string>
    <string name="name">Name</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="untitled">Untitled</string>
    <string name="no_profile_selected">No profile selected</string>
    <string name="no_profile_found">No profile found</string>
    <string name="do_you_want_to_remove_this_profile">Do you want to remove this profile?</string>
    <string name="do_you_want_to_duplicate_this_profile">Do you want to duplicate this profile?</string>
    <string name="do_you_want_to_duplicate_this_preset">Do you want to duplicate this preset?</string>
    <string name="do_you_want_to_remove_this_container">Do you want to remove this container?</string>
    <string name="do_you_want_to_duplicate_this_container">Do you want to duplicate this container?</string>
    <string name="do_you_want_to_remove_this_file">Do you want to remove this file?</string>
    <string name="do_you_want_to_remove_this_controller">Do you want to remove this controller?</string>
    <string name="do_you_want_to_remove_this_wine_version">Do you want to remove this Wine version?</string>
    <string name="do_you_want_to_remove_this_preset">Do you want to remove this preset?</string>
    <string name="do_you_want_to_remove_this_component_version">Do you want to remove this component version?</string>
    <string name="do_you_want_to_end_this_process">Do you want to end this process?</string>
    <string name="controls_editor">Controls Editor</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="container">Container</string>
    <string name="screen_size">Screen Size</string>
    <string name="new_environment_variable">New Environment Variable</string>
    <string name="environment_variables">Environment Variables</string>
    <string name="value">Value</string>
    <string name="processor_affinity">Processor Affinity</string>
    <string name="processor_affinity_32_bit_apps">Processor Affinity (32-bit apps)</string>
    <string name="cursor_speed">Cursor Speed</string>
    <string name="relative_mouse_movement">Relative Mouse Movement</string>
    <string name="toggle_switch">Toggle Switch</string>
    <string name="profile_exported_to">Profile exported to</string>
    <string name="unable_to_import_profile">Unable to import profile</string>
    <string name="wine_configuration">Wine Configuration</string>
    <string name="enable_csmt">Enable CSMT (Command Stream Multi-Thread)</string>
    <string name="gpu_name">GPU Name</string>
    <string name="offscreen_rendering_mode">Offscreen Rendering Mode</string>
    <string name="enable_strict_shader_math">Enable Strict Shader Math</string>
    <string name="video_memory_size">Video Memory Size</string>
    <string name="none">None</string>
    <string name="custom_text">Custom Text</string>
    <string name="icon">Icon</string>
    <string name="import_profile">Import Profile</string>
    <string name="export_profile">Export Profile</string>
    <string name="touchpad_help">Touchpad Help</string>
    <string name="touchpad_help_mouse_left_click_title">Mouse Left-Click</string>
    <string name="touchpad_help_mouse_left_click_description">Short tap with one finger</string>
    <string name="touchpad_help_mouse_right_click_title">Mouse Right-Click</string>
    <string name="touchpad_help_mouse_right_click_description">Tap with one finger and short tap with another finger</string>
    <string name="touchpad_help_mouse_scroll_wheel_title">Mouse Scroll Wheel</string>
    <string name="touchpad_help_mouse_scroll_wheel_description">Two fingers tap and move</string>
    <string name="touchpad_help_main_menu_title">Main Menu</string>
    <string name="touchpad_help_main_menu_description">Four fingers tap</string>
    <string name="duplicate">Duplicate</string>
    <string name="about">About</string>
    <string name="credits_and_third_party_apps">Credits and Third-party apps</string>
    <string name="external_controllers">External Controllers</string>
    <string name="graphics_driver">Graphics Driver</string>
    <string name="audio_driver">Audio Driver</string>
    <string name="loading">Loading...</string>
    <string name="press_any_button_on_your_controller">Press any button on your controller</string>
    <string name="bindings">Bindings</string>
    <string name="show_touchscreen_controls">Show Touchscreen Controls</string>
    <string name="dxwrapper">DX Wrapper</string>
    <string name="mouse_warp_override">Mouse Warp Override</string>
    <string name="direct3d">Direct3D</string>
    <string name="directsound">DirectSound</string>
    <string name="directmusic">DirectMusic</string>
    <string name="directplay">DirectPlay</string>
    <string name="directshow">DirectShow</string>
    <string name="directinput">DirectInput</string>
    <string name="xaudio">XAudio</string>
    <string name="directx">DirectX</string>
    <string name="vcrun2005">Visual C++ 2005</string>
    <string name="vcrun2010">Visual C++ 2010</string>
    <string name="wmdecoder">Windows Media Decoder</string>
    <string name="settings">Settings</string>
    <string name="exec_arguments">Exec Arguments</string>
    <string name="win_components">Win Components</string>
    <string name="drives">Drives</string>
    <string name="drive">Drive</string>
    <string name="force_fullscreen">Force Fullscreen</string>
    <string name="fullscreen_stretched">Fullscreen Stretched</string>
    <string name="import_shortcut">Import Shortcut</string>
    <string name="select_target_container">Select Target Container</string>
    <string name="no_container_found">No container found. Please create a container first.</string>
    <string name="unsupported_file_format">Unsupported file format. Please select a .desktop or .exe file.</string>
    <string name="shortcut_imported_successfully">Shortcut imported successfully.</string>
    <string name="range">Range</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="force">Force</string>
    <string name="install_wine">Install Wine</string>
    <string name="version">Version</string>
    <string name="unable_to_install_wine">Unable to install Wine</string>
    <string name="unable_to_remove_this_wine_version">Unable to remove this Wine version</string>
    <string name="wine_version">Wine Version</string>
    <string name="wine_version_removed">Wine version removed.</string>
    <string name="download_kron4ek">Download Kron4ek build</string>
    <string name="custom_wine_requires_64bit">Only 64-bit (x86_64 / WoW64) Wine builds are supported here. 32-bit-only builds cannot run without Box86.</string>
    <string name="custom_wine_no_32bit_support">Installed without WoW64 32-bit support: 64-bit apps will run, but 32-bit Windows apps will not. Prefer a wow64 build.</string>
    <string name="custom_wine_checksum_mismatch">Downloaded Wine package failed checksum verification and was discarded. Please retry the download.</string>
    <string name="box64_rc_file">Box64RC Manager</string>
    <string name="save_game_manager">Save Game Manager</string>
    <string name="task_manager">Task Manager</string>
    <string name="magnifier">Magnifier</string>
    <string name="logs">Logs</string>
    <string name="export">Export</string>
    <string name="screen_effect">Screen Effect</string>
    <string name="enable_fxaa">Enable FXAA</string>
    <string name="fps_limiter">FPS Limiter</string>
    <string name="frame_generation">Frame Generation</string>
    <string name="brightness">Brightness</string>
    <string name="contrast">Contrast</string>
    <string name="gamma">Gamma</string>
    <string name="color_adjustment">Color Adjustment</string>
    <string name="enable_crt_shader">Enable CRT Shader</string>
    <string name="enable_hdr">Enable HDR</string>
    <string name="hdr_intensity">HDR Intensity</string>
    <string name="enable_toon_shader">Enable Toon Shader</string>
    <string name="toon_intensity">Toon Intensity</string>
    <string name="enable_frame_pacing">Enable Frame Pacing</string>
    <string name="active_windows">Active Windows</string>
    <string name="pip_mode">PiP Mode</string>
    <string name="hud_scale">HUD Scale</string>
    <string name="hud_transparency">HUD Transparency</string>
    <string name="hud_elements">HUD Elements</string>
    <string name="show_fps">Show FPS</string>
    <string name="show_cpu">Show CPU</string>
    <string name="show_gpu">Show GPU</string>
    <string name="show_ram">Show RAM</string>
    <string name="show_battery">Show Battery</string>
    <string name="show_power">Show Power</string>
    <string name="show_temp">Show Temp</string>
    <string name="show_renderer_info">Show Renderer Info</string>
    <string name="live_preview">Live Preview</string>
    <string name="hud_configuration">HUD Configuration</string>
    <string name="import_icon_pack">Import Pack</string>
    <string name="create_icon_pack">Create Pack</string>
    <string name="no_icon_packs">No icon packs yet. Create one or import an .ipk file.</string>
    <string name="icon_pack_ipk_hint">Packs are shared as .ipk files (zip with icons). InputBridge-style packs are also supported on import.</string>
    <string name="device">Device</string>
    <string name="wine_apps">Wine Apps</string>
    <string name="wine_cmd">Command Prompt</string>
    <string name="wine_taskmgr">Task Manager</string>
    <string name="wine_winecfg">Wine Configuration</string>
    <string name="wine_regedit">Registry Editor</string>
    <string name="wine_iexplore">Internet Explorer</string>
    <string name="wine_wordpad">Wordpad</string>
    <string name="soft_stretch">Soft Stretch</string>
    <string name="toggle_orientation">Toggle Orientation</string>
    <string name="transfer">Transfer</string>
    <string name="share">Share</string>
    <string name="unregister">Unregister</string>
    <string name="social_hub">Social Hub</string>
</resources>